# swift

./: .gitignore  404.html  LICENSE  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml
.github/workflows/: docs.yml  publish.yml
api/: index.html
api/aggregation/: index.html
api/bucketing/: index.html
api/distance/: index.html
api/extraction/: index.html
api/normalization/: index.html
api/pipeline/: index.html
api/plotting/: index.html
api/threshold/: index.html
api/types/: index.html
docs/: getting-started.md  index.md
docs/api/: aggregation.md  bucketing.md  distance.md  extraction.md  index.md  normalization.md  pipeline.md  plotting.md  threshold.md  types.md
docs/user-guide/: configuration.md  pipeline.md  sklearn-integration.md  visualization.md
experiments/: __init__.py  ablations.py  baselines.py  data_loader.py  drift.py  evaluation.py  run_ablations.py  run_all.sh  run_bank_marketing.py  run_calibration.py  run_gradual_drift.py  run_home_credit.py  run_lending_club.py  run_multi_seed.py  run_power_analysis.py  run_taiwan_credit.py  runner_base.py  runner_controlled.py  runner_gradual.py
getting-started/: index.html
notebooks/: getting_started.ipynb
search/: search_index.json
src/swift/: __init__.py  aggregation.py  bucketing.py  distance.py  extraction.py  normalization.py  pipeline.py  plotting.py  threshold.py  (+1 more)
tests/: conftest.py  test_aggregation.py  test_analyze.py  test_bucketing.py  test_distance.py  test_extraction.py  test_normalization.py  test_pipeline.py  test_smoke.py  test_threshold.py
(+11 files in other folders)
